Arrow now correctly displaying tip to grid point, shortened line

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Chessboard.cs" />
+    <Compile Include="Assets\Arrowhead.cs" />
     <Compile Include="Assets\DrawLine.cs" />
   </ItemGroup>
   <ItemGroup>
