Excluding some vuforia large files

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ crashlytics-build.properties
 Assets/Vuforia/Editor/    # Vuforia Editor settings
 Assets/Vuforia/Samples/   # Vuforia Sample files if any
 Packages/com.ptc.vuforia.engine-*.tgz
+Assets/Editor/Migration/com.ptc.vuforia.engine-10.22.5.tgz
+
